parser/proto.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { proto: peg$parseproto },
      peg$startRuleFunction  = peg$parseproto,

      peg$c0 = function(a, b) {
      	var arr = {syntax: a.syntax};
          arr.content = b.filter(function(a){return a !== undefined});
      	return arr;
      },
      peg$c1 = "//",
      peg$c2 = peg$literalExpectation("//", false),
      peg$c3 = /^[^\n]/,
      peg$c4 = peg$classExpectation(["\n"], true, false),
      peg$c5 = "\n",
      peg$c6 = peg$literalExpectation("\n", false),
      peg$c7 = "\r\n",
      peg$c8 = peg$literalExpectation("\r\n", false),
      peg$c9 = function() {},
      peg$c10 = /^[ \r\n\t]/,
      peg$c11 = peg$classExpectation([" ", "\r", "\n", "\t"], false, false),
      peg$c12 = /^[A-Za-z]/,
      peg$c13 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
      peg$c14 = /^[0-9]/,
      peg$c15 = peg$classExpectation([["0", "9"]], false, false),
      peg$c16 = /^[0-7]/,
      peg$c17 = peg$classExpectation([["0", "7"]], false, false),
      peg$c18 = /^[0-9A-Fa-f]/,
      peg$c19 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
      peg$c20 = "_",
      peg$c21 = peg$literalExpectation("_", false),
      peg$c22 = function(a, b) { return a+b.join("") },
      peg$c23 = ".",
      peg$c24 = peg$literalExpectation(".", false),
      peg$c25 = function(a, b) { b.unshift([a]); return b.map(function(c){return c.join('')}).join('') },
      peg$c26 = /^[ ]/,
      peg$c27 = peg$classExpectation([" "], false, false),
      peg$c28 = ":",
      peg$c29 = peg$literalExpectation(":", false),
      peg$c30 = "\"",
      peg$c31 = peg$literalExpectation("\"", false),
      peg$c32 = /^[^"]/,
      peg$c33 = peg$classExpectation(["\""], true, false),
      peg$c34 = function(a, b) {
      	return {
      		tag: a.join(''),
      		content: b.join('')
      	}
      },
      peg$c35 = "@inject_tag:",
      peg$c36 = peg$literalExpectation("@inject_tag:", false),
      peg$c37 = function(a) {
      	var result = {};
      	for (var i = 0; i < a.length; i++) {
      		result[a[0].tag] = a[0].content;
      	}
      	return result;
      },
      peg$c38 = function(a, b, c) { return (a == '.' ? '.' : '')+b.map(function(a){return a.join('')}).join('')+c },
      peg$c39 = "0",
      peg$c40 = peg$literalExpectation("0", false),
      peg$c41 = /^[1-9]/,
      peg$c42 = peg$classExpectation([["1", "9"]], false, false),
      peg$c43 = function(a) { return parseInt(a[0]+a[1]) },
      peg$c44 = function(a) { return parseInt(a, 8) },
      peg$c45 = /^[xX]/,
      peg$c46 = peg$classExpectation(["x", "X"], false, false),
      peg$c47 = function(a) { return parseInt(a, 16) },
      peg$c48 = "inf",
      peg$c49 = peg$literalExpectation("inf", false),
      peg$c50 = "nan",
      peg$c51 = peg$literalExpectation("nan", false),
      peg$c52 = /^[eE]/,
      peg$c53 = peg$classExpectation(["e", "E"], false, false),
      peg$c54 = /^[+\-]/,
      peg$c55 = peg$classExpectation(["+", "-"], false, false),
      peg$c56 = "true",
      peg$c57 = peg$literalExpectation("true", false),
      peg$c58 = "false",
      peg$c59 = peg$literalExpectation("false", false),
      peg$c60 = "'",
      peg$c61 = peg$literalExpectation("'", false),
      peg$c62 = function(obj) { return obj[1].join('') },
      peg$c63 = /^[^\0\n\\"']/,
      peg$c64 = peg$classExpectation(["\0", "\n", "\\", "\"", "'"], true, false),
      peg$c65 = "\\",
      peg$c66 = peg$literalExpectation("\\", false),
      peg$c67 = /^["']/,
      peg$c68 = peg$classExpectation(["\"", "'"], false, false),
      peg$c69 = /^[abfnrtv"'\\]/,
      peg$c70 = peg$classExpectation(["a", "b", "f", "n", "r", "t", "v", "\"", "'", "\\"], false, false),
      peg$c71 = ";",
      peg$c72 = peg$literalExpectation(";", false),
      peg$c73 = /^[\-+]/,
      peg$c74 = peg$classExpectation(["-", "+"], false, false),
      peg$c75 = "syntax",
      peg$c76 = peg$literalExpectation("syntax", false),
      peg$c77 = "=",
      peg$c78 = peg$literalExpectation("=", false),
      peg$c79 = "proto2",
      peg$c80 = peg$literalExpectation("proto2", false),
      peg$c81 = "proto3",
      peg$c82 = peg$literalExpectation("proto3", false),
      peg$c83 = function(val) { return { type: "syntax", syntax: val } },
      peg$c84 = "import",
      peg$c85 = peg$literalExpectation("import", false),
      peg$c86 = "weak",
      peg$c87 = peg$literalExpectation("weak", false),
      peg$c88 = "public",
      peg$c89 = peg$literalExpectation("public", false),
      peg$c90 = function(mod, pkg) { return {type: "import", package: pkg, modifier: mod } },
      peg$c91 = "package",
      peg$c92 = peg$literalExpectation("package", false),
      peg$c93 = function(val) { return { type: "package", package: val } },
      peg$c94 = "option",
      peg$c95 = peg$literalExpectation("option", false),
      peg$c96 = function(name, val) { return { type: "option", name: name, val: val } },
      peg$c97 = "(",
      peg$c98 = peg$literalExpectation("(", false),
      peg$c99 = ")",
      peg$c100 = peg$literalExpectation(")", false),
      peg$c101 = function(a, c) { if(Array.isArray(a)) a = a.join(''); return a+(c[0] ? c[0].join('') : "") },
      peg$c102 = "double",
      peg$c103 = peg$literalExpectation("double", false),
      peg$c104 = "float",
      peg$c105 = peg$literalExpectation("float", false),
      peg$c106 = "int32",
      peg$c107 = peg$literalExpectation("int32", false),
      peg$c108 = "int64",
      peg$c109 = peg$literalExpectation("int64", false),
      peg$c110 = "uint32",
      peg$c111 = peg$literalExpectation("uint32", false),
      peg$c112 = "uint64",
      peg$c113 = peg$literalExpectation("uint64", false),
      peg$c114 = "sint32",
      peg$c115 = peg$literalExpectation("sint32", false),
      peg$c116 = "sint64",
      peg$c117 = peg$literalExpectation("sint64", false),
      peg$c118 = "fixed32",
      peg$c119 = peg$literalExpectation("fixed32", false),
      peg$c120 = "fixed64",
      peg$c121 = peg$literalExpectation("fixed64", false),
      peg$c122 = "sfixed32",
      peg$c123 = peg$literalExpectation("sfixed32", false),
      peg$c124 = "sfixed64",
      peg$c125 = peg$literalExpectation("sfixed64", false),
      peg$c126 = "bool",
      peg$c127 = peg$literalExpectation("bool", false),
      peg$c128 = "string",
      peg$c129 = peg$literalExpectation("string", false),
      peg$c130 = "bytes",
      peg$c131 = peg$literalExpectation("bytes", false),
      peg$c132 = "[",
      peg$c133 = peg$literalExpectation("[", false),
      peg$c134 = "]",
      peg$c135 = peg$literalExpectation("]", false),
      peg$c136 = function(a) {
      	var opts = {};
          a.map(function(a){
                if(typeof a == 'object' && a != null)
                	opts[a.name] = a.val;
          });
      	return opts;
      },
      peg$c137 = "repeated",
      peg$c138 = peg$literalExpectation("repeated", false),
      peg$c139 = function(g, a, b, c, d, e, f) {
      	return {
            type: "field",
            repeated: a != null,
            typename: b,
            name: c,
            fieldNo: d,
            opts: e == null ? {} : e,
            comments: f,
            tags: g == null ? {} : g
      	}
      },
      peg$c140 = ",",
      peg$c141 = peg$literalExpectation(",", false),
      peg$c142 = function(a, b) { var arr = [a]; b.map(function(elem){arr.push(elem)}); return arr; },
      peg$c143 = function(name, val) { return {name: name, val: val} },
      peg$c144 = "oneof",
      peg$c145 = peg$literalExpectation("oneof", false),
      peg$c146 = "{",
      peg$c147 = peg$literalExpectation("{", false),
      peg$c148 = "}",
      peg$c149 = peg$literalExpectation("}", false),
      peg$c150 = function(b, c) {
      	var arr = [];
          c.map(function(a){
          	if(a && a.type)
              	arr.push(a);
          });
      	return { type: "oneof", name: b, content: arr }
      },
      peg$c151 = function(b, c, d, e) {
      	return {
            type: "field",
            typename: b,
            name: c,
            fieldNo: d,
            opts: e == null ? {} : e
      	}
      },
      peg$c152 = "map",
      peg$c153 = peg$literalExpectation("map", false),
      peg$c154 = "<",
      peg$c155 = peg$literalExpectation("<", false),
      peg$c156 = ">",
      peg$c157 = peg$literalExpectation(">", false),
      peg$c158 = function(a, b, c, d, e) {
      	return {
            type: "field",
            typename: "map",
            key: a,
            value: b,
            name: c,
            fieldNo: d,
            opts: e == null ? {} : e
      	}
      },
      peg$c159 = "reserved",
      peg$c160 = peg$literalExpectation("reserved", false),
      peg$c161 = "to",
      peg$c162 = peg$literalExpectation("to", false),
      peg$c163 = "enum",
      peg$c164 = peg$literalExpectation("enum", false),
      peg$c165 = function(a, b) { return {type: 'enum', name: a, content: b.content, opts: b.opts } },
      peg$c166 = function(a) {
      	var opts = {};
          var content = [];
      	for(var elem of a){
          	if(!elem)
              	continue;
              else if(elem.type == 'enumField')
              	content.push(elem);
          	else if(elem.type == 'option')
              	opts[elem.name] = elem.val;
          }
          return {content: content, opts: opts};
      },
      peg$c167 = function(a, b, c) {
      	return { type: 'enumField', name: a, val: b, opts: c == null ? {} : c };
      },
      peg$c168 = "message",
      peg$c169 = peg$literalExpectation("message", false),
      peg$c170 = function(a, b) { return {type: 'message', name: a, content: b.content, opts: b.opts } },
      peg$c171 = function(a) {
      	var opts = {};
          var content = [];
      	for(var elem of a){
          	if(!elem)
              	continue;
          	else if(elem.type == 'option')
              	opts[elem.name] = elem.val;
             	else
              	content.push(elem);
          }
          return {content: content, opts: opts};
      },
      peg$c172 = "service",
      peg$c173 = peg$literalExpectation("service", false),
      peg$c174 = function(a, b) {
      	var opts = {};
          var content = [];
      	for(var elem of b){
          	if(!elem)
              	continue;
          	else if(elem.type == 'option')
              	opts[elem.name] = elem.val;
             	else
              	content.push(elem);
          }
          return {type: "service", name: a, content: content, opts: opts};
      },
      peg$c175 = "rpc",
      peg$c176 = peg$literalExpectation("rpc", false),
      peg$c177 = "stream",
      peg$c178 = peg$literalExpectation("stream", false),
      peg$c179 = "returns",
      peg$c180 = peg$literalExpectation("returns", false),
      peg$c181 = function(a, b, c, d, e, f) {
      	if(b && b[0] == "stream")
          	c.stream = true;
          if( f == ";" )
          	f = {};
          if(d && d[0] == "stream")
          	f.stream = true;
      	return { type: "rpc", name: a, param: c, returns: e, opts: f }
      },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseproto() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsews();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesyntax();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseimport();
        if (s4 === peg$FAILED) {
          s4 = peg$parsepackage();
          if (s4 === peg$FAILED) {
            s4 = peg$parseoption();
            if (s4 === peg$FAILED) {
              s4 = peg$parseemptyStatement();
              if (s4 === peg$FAILED) {
                s4 = peg$parsemessage();
                if (s4 === peg$FAILED) {
                  s4 = peg$parseenum();
                  if (s4 === peg$FAILED) {
                    s4 = peg$parseservice();
                    if (s4 === peg$FAILED) {
                      s4 = peg$parsews();
                    }
                  }
                }
              }
            }
          }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseimport();
          if (s4 === peg$FAILED) {
            s4 = peg$parsepackage();
            if (s4 === peg$FAILED) {
              s4 = peg$parseoption();
              if (s4 === peg$FAILED) {
                s4 = peg$parseemptyStatement();
                if (s4 === peg$FAILED) {
                  s4 = peg$parsemessage();
                  if (s4 === peg$FAILED) {
                    s4 = peg$parseenum();
                    if (s4 === peg$FAILED) {
                      s4 = peg$parseservice();
                      if (s4 === peg$FAILED) {
                        s4 = peg$parsews();
                      }
                    }
                  }
                }
              }
            }
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecomment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      if (peg$c3.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        if (peg$c3.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s3 = peg$c5;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s3 === peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c7) {
            s3 = peg$c7;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parserws() {
    var s0, s1;

    s0 = [];
    if (peg$c10.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c11); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        if (peg$c10.test(input.charAt(peg$currPos))) {
          s1 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsecomment();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsews() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parserws();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c9();
    }
    s0 = s1;

    return s0;
  }

  function peg$parseletter() {
    var s0;

    if (peg$c12.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }

    return s0;
  }

  function peg$parsedecDigit() {
    var s0;

    if (peg$c14.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c15); }
    }

    return s0;
  }

  function peg$parseoctDigit() {
    var s0;

    if (peg$c16.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c17); }
    }

    return s0;
  }

  function peg$parsehexDigit() {
    var s0;

    if (peg$c18.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }

    return s0;
  }

  function peg$parseident() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseletter();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseletter();
      if (s3 === peg$FAILED) {
        s3 = peg$parsedecDigit();
        if (s3 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 95) {
            s3 = peg$c20;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c21); }
          }
        }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseletter();
        if (s3 === peg$FAILED) {
          s3 = peg$parsedecDigit();
          if (s3 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 95) {
              s3 = peg$c20;
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c21); }
            }
          }
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c22(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefullIdent() {
    var s0, s1, s2, s3, s4, s5;
